# try_hyperbez

./: .gitignore  Cargo.toml  index.html
.github/workflows/: trunk-deploy.yml
src/: components.rs  coprop.rs  euler_approx.rs  explorer.rs  explorer_theta_kappa.rs  hb.rs  hb_extra.rs  hb_utils.rs  hyper_theta_kappa.rs  hyperparams.rs  jsport.rs  lib.rs  lut.rs  main.rs  num_dual_ext.rs  old.rs  ptan.rs  ptan_gen.rs  utils.rs
src/components/: plots.rs  sheet.rs
src/hb/: render.rs  solver.rs
src/hb/solver/: analytic.rs  coprop_dual.rs  dual.rs  ptan_analytic.rs  ptan_dual.rs  ptan_dual_endk.rs  theta_kappa.rs
src/hb_extra/: solver.rs
