[package]
name = "hyperbez_toy"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tracing-web = "0.1.3"
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"

xilem_web.git = "https://github.com/linebender/xilem.git"
spline = { git = "https://github.com/RagibHasin/spline-research.git", branch = "new_hyperbez_cleanup" }

approx = "0.5.1"
nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
num-dual = "0.10.3"
num-traits = "0.2.19"
half = "2.4.1"

pico-args = "0.5.0"
