[package]
name = "hyperbez_toy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
arrayvec = "0.7.6"
console_error_panic_hook = "0.1.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tracing-web = "0.1.3"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "History",
    "Location",
    "PopStateEvent",
] }

xilem_web.git = "https://github.com/linebender/xilem.git"

nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
num-dual = "0.11.1"
num-traits = "0.2.19"

[dev-dependencies]
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
    "unstable",
] }
